# kunnu-cpp

./: .gitignore  1material_wave.py  CMakeLists.txt  E_random_generator.py  Matlabscript.m  cohesion_phi_random_generator.py  cohesion_random_generator.py  etrial.ufl  iterator.sh  iterator_single.sh  main.cpp  phi_random_generator.py  pythoncode.py
